--- a/profile/package.json
+++ b/profile/package.json
@@ -12,7 +12,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:dev": "env-cmd -f ./env_config/.env.dev react-scripts start",
+    "start:qa": "env-cmd -f ./env_config/.env.qa react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
